[package]
name = "foundation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
chrono = "0.4"
env_logger = "0.11"
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
log = { version = "0.4", features = [] }
network-interface = "1.1"
notify = {  version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
num_cpus = "1.16"
serde = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full", "fs", "io-util", "net"] }
uuid = { version = "1.7.0", features = ["v4"] }
versions = "6.2"

[target.'cfg(target_os = "linux")'.dependencies]
pest = "2.7"
pest_derive = "2.7"
wl-nl80211 = "0.1"


